PR/51034: Abhinav Upadhyay: Close database connection when failed to commit